Part1 - Ch3.05 Spring Security 란

--- a/docs/Part1/3. 유저 기능 개발.md
+++ b/docs/Part1/3. 유저 기능 개발.md
@@ -94,3 +94,35 @@
 - 로그아웃 처리
   - 토큰이 무상태(stateless)이므로 서버에서 강제 로그아웃 등의 기능을 구현하기 어려움
   - 이를 해결하기 위해 블랙리스트를 사용
+
+
+## 5. Spring Security 란
+
+---
+
+- 스프링 프레임워크의 하위 프로젝트로, 애플리케이션의 보안을 담당하는 강력하고 유연한 보안 프레임워크
+- 인증(Authentication)과 인가(Authorization)를 포함한 다양한 보안 기능을 제공
+
+### Spring Security 주요 기능
+
+- 인증(Authentication)
+- 인가(Authorization)
+- 보안 컨텍스트(Security Context)
+  - 인증된 사용자에 대한 정보를 저장/접근할 수 있는 컨텍스트 제공
+- CSRF(Cross-Site Request Forgery Protection)
+  - 인증된 사용자가 웹 애플리케이션에 특정 요청을 보내도록 유도하는 공격 행위
+- 세션 관리
+- 암호화
+
+### Spring Security 장단점
+
+- 장점
+  - 강력한 보안 기능
+  - 유연성: 다양한 인증/인가 방식을 쉽게 확장 및 커스텀 가능
+  - 통합성: Spring Boot, Spring Data 등 Spring 프로젝트와 호환성이 뛰어남
+- 단점
+  - 복잡성: 보안 요건 많을수록 설정 파일 및 코드 관리하기가 어려움
+  - Learning Curve
+  - 디버깅 난이도: 보안 필터 체인의 동작이나 인증 실패 원인 파악하기 어려움
+  - 성능: 너무 복잡한 인증/인가 로직이 있는 경우 Application에 영향을 줄 수 있음
+  - 버전 호환성: 다른 Spring 프로젝트와 밀접하게 통합되어있어 호환성 문제가 발생할 수 있음
