Part1 - Ch3.06 Spring Security 프레임워크 추가 및 설정

--- a/docs/Part1/3. 유저 기능 개발.md
+++ b/docs/Part1/3. 유저 기능 개발.md
@@ -126,3 +126,6 @@
   - 디버깅 난이도: 보안 필터 체인의 동작이나 인증 실패 원인 파악하기 어려움
   - 성능: 너무 복잡한 인증/인가 로직이 있는 경우 Application에 영향을 줄 수 있음
   - 버전 호환성: 다른 Spring 프로젝트와 밀접하게 통합되어있어 호환성 문제가 발생할 수 있음
+
+
+## 6. Spring Security 프레임워크 추가 및 설정
