Part1 - Ch3.09 다른 기기 로그아웃을 위한 Blacklist 기능 개발

--- a/docs/Part1/3. 유저 기능 개발.md
+++ b/docs/Part1/3. 유저 기능 개발.md
@@ -133,3 +133,6 @@
 ## 7. JWT 기반 로그인 기능 개발
 
 ## 8. JWT 기반 로그아웃 기능 개발
+
+## 9. 다른 기기 로그아웃을 위한 Blacklist 기능 개발
+- 다른 기기를 로그아웃 해야되거나 쿠키를 안쓰는 디바이스들에 대해 로그아웃을 해야될 때는 Blacklist 방식으로 로그아웃을 해야된다
