--- a/docs/Part1/4. 게시판 기능 개발.md
+++ b/docs/Part1/4. 게시판 기능 개발.md
@@ -14,3 +14,14 @@
     - 보안 컨텍스트(Security Context) 활용
   - 반복적인 글 작성 차단
     - 5분에 1번만 작성 가능(rate limit)
+
+## 2. 게시글 조회 기능 개발
+
+- 페이징 방식
+  - 전체 게시글에 대해서 COUNT 함수 실행 필요
+  - 신규 글 / 글 삭제될때 페이지 변경이 잦음
+  - 불편한 사용감
+- 스크롤 방식
+  - 전체 데이터를 노출할 필요 없음
+  - 구현 난이도 낮음
+  - 직관적이고 모바일에 최적화
