--- a/docs/Part1/4. 게시판 기능 개발.md
+++ b/docs/Part1/4. 게시판 기능 개발.md
@@ -17,6 +17,8 @@
 
 ## 2. 게시글 조회 기능 개발
 
+---
+
 - 페이징 방식
   - 전체 게시글에 대해서 COUNT 함수 실행 필요
   - 신규 글 / 글 삭제될때 페이지 변경이 잦음
@@ -25,3 +27,12 @@
   - 전체 데이터를 노출할 필요 없음
   - 구현 난이도 낮음
   - 직관적이고 모바일에 최적화
+
+## 3. 게시글 수정 기능 개발
+
+---
+
+- 보안 컨텍스트(Security Context) 활용
+  - 본인이 작성한 글만 본인이 수정 가능
+- 반복적인 글 수정 차단
+  - 5분에 1번만 수정 가능(rate limit)
