Part1 - Ch4.04 게시글 삭제 기능 개발

--- a/docs/Part1/4. 게시판 기능 개발.md
+++ b/docs/Part1/4. 게시판 기능 개발.md
@@ -6,7 +6,7 @@
 
 ---
 
-- 게시판(Board)  -> /boards/{board_id}/articles/{article_id}
+- 게시판(Board) -> /boards/{board_id}/articles/{article_id}
   - 게시글(Article)
     - 댓글(Comment)
     - 첨부파일(Attachment)
@@ -36,3 +36,26 @@
   - 본인이 작성한 글만 본인이 수정 가능
 - 반복적인 글 수정 차단
   - 5분에 1번만 수정 가능(rate limit)
+
+## 4. 게시글 삭제 기능 개발
+
+---
+
+- 보안 컨텍스트(Security Context) 활용
+  - 본인이 작성한 글만 본인이 삭제 가능
+- 반복적인 글 수정 차단
+  - 5분에 1번만 삭제 가능(rate limit)
+- Soft Delete(논리 삭제)
+  - DB에서 실제로 삭제하지 않고 유저에게만 안보이도록 하는 방식
+  - 반대는 Hard Delete(물리 삭제)
+
+### Soft Delete vs Hard Delete
+
+- soft Delete
+  - 특정 Flag(is_deleted)를 두는 방식과 특정 테이블(deleted_articles)로 옮기는 방식이 있음
+    - 구현 방식은 Flag 가 편리하지만 휴먼 에러로 인해 노출될 가능성이 높음
+    - 테이블 방식은 트랜잭션을 고려해야되고 잘못된 트랜잭션으로 인해 더 골치 아플 수 있음
+  - 실제로 데이터가 삭제됐을때 부작용이 많아서 대부분 채용하는 방식
+- Hard Delete
+  - Soft Delete 방식으로 운영하다가 용량을 못버티는 경우(성능, 비용)
+  - Data Retention: 개인정보보호법, 위치데이터 등등 보관주기가 정해진 경우
