Part1 - Ch4.05 댓글 작성 기능 개발

--- a/docs/Part1/4. 게시판 기능 개발.md
+++ b/docs/Part1/4. 게시판 기능 개발.md
@@ -59,3 +59,15 @@
 - Hard Delete
   - Soft Delete 방식으로 운영하다가 용량을 못버티는 경우(성능, 비용)
   - Data Retention: 개인정보보호법, 위치데이터 등등 보관주기가 정해진 경우
+
+## 5. 댓글 작성 기능 개발
+
+---
+
+- 게시판(Board) -> /boards/{board_id}/articles/{article_id}/comments
+  - 게시글(Article)
+    - 댓글(Comment)
+    - 첨부파일(Attachment)
+  - 게시판, 게시글이 존재하고 삭제되지 않았는지를 확인하고 댓글이 작성되야함
+    - 트랜잭션 처리가 필요!
+  - 댓글은 1분에 1번만 작성 가능(rate limit)
