Part1 - Ch4.06 댓글 조회 기능 개발

--- a/docs/Part1/4. 게시판 기능 개발.md
+++ b/docs/Part1/4. 게시판 기능 개발.md
@@ -6,7 +6,7 @@
 
 ---
 
-- 게시판(Board) -> /boards/{board_id}/articles/{article_id}
+- 게시판(Board) -> `/boards/{board_id}/articles/{article_id}`
   - 게시글(Article)
     - 댓글(Comment)
     - 첨부파일(Attachment)
@@ -64,10 +64,23 @@
 
 ---
 
-- 게시판(Board) -> /boards/{board_id}/articles/{article_id}/comments
+- 게시판(Board) -> `/boards/{board_id}/articles/{article_id}/comments`
   - 게시글(Article)
     - 댓글(Comment)
     - 첨부파일(Attachment)
   - 게시판, 게시글이 존재하고 삭제되지 않았는지를 확인하고 댓글이 작성되야함
     - 트랜잭션 처리가 필요!
   - 댓글은 1분에 1번만 작성 가능(rate limit)
+
+## 6. 댓글 조회 기능 개발
+
+---
+
+- 게시판(Board) -> `/boards/{board_id}/articles/{article_id}`
+  - 게시글(Article)
+    - 댓글(Comment)
+    - 첨부파일(Attachment)
+- 댓글만 보는 경우는 없기 때문에 게시글 조회시 댓글도 같이 제공
+- connection pool을 활용한다면?
+  - board, article까진 select / join으로 조회
+  - 0.1초라도 빨리 보여주기 위해서 comment 테이블은 별도로 조회
