Part1 - Ch4.07 댓글 수정 기능 개발

--- a/docs/Part1/4. 게시판 기능 개발.md
+++ b/docs/Part1/4. 게시판 기능 개발.md
@@ -84,3 +84,16 @@
 - connection pool을 활용한다면?
   - board, article까진 select / join으로 조회
   - 0.1초라도 빨리 보여주기 위해서 comment 테이블은 별도로 조회
+
+## 7. 댓글 수정 기능 개발
+
+---
+
+- 게시판(Board) -> `/boards/{board_id}/articles/{article_id}/comments/{id}`
+  - 게시글(Article)
+    - 댓글(Comment)
+    - 첨부파일(Attachment)
+- 보안 컨텍스트(Security Context) 활용
+  - 본인이 작성한 댓글만 본인이 수정 가능
+- 반복적인 댓글 수정 차단
+  - 1분에 1번만 수정 가능(rate limit)
