--- a/docs/Part1/4. 게시판 기능 개발.md
+++ b/docs/Part1/4. 게시판 기능 개발.md
@@ -97,3 +97,16 @@
   - 본인이 작성한 댓글만 본인이 수정 가능
 - 반복적인 댓글 수정 차단
   - 1분에 1번만 수정 가능(rate limit)
+
+## 8. 댓글 삭제 기능 개발
+
+---
+
+- 게시판(Board) -> `/boards/{board_id}/articles/{article_id}/comments/{id}`
+  - 게시글(Article)
+    - 댓글(Comment)
+    - 첨부파일(Attachment)
+- 보안 컨텍스트(Security Context) 활용
+  - 본인이 작성한 댓글만 본인이 삭제 가능
+- 반복적인 댓글 삭제 차단
+  - 1분에 1번만 삭제 가능(rate limit)
