Part1 - Ch4.09 대댓글 구현 방식

--- a/docs/Part1/4. 게시판 기능 개발.md
+++ b/docs/Part1/4. 게시판 기능 개발.md
@@ -110,3 +110,60 @@
   - 본인이 작성한 댓글만 본인이 삭제 가능
 - 반복적인 댓글 삭제 차단
   - 1분에 1번만 삭제 가능(rate limit)
+
+## 9. 대댓글 구현 방식
+
+---
+
+- 게시판(Board)
+  - 게시글(Article)
+    - 댓글(Comment)
+      - 대댓글(Reply, Nested Comment)
+    - 첨부파일(Attachment)
+- 예시)
+- 안녕하세요. 김한성입니다
+  - 하이하이
+  - 김한성이 누구세요?
+- 안녕하세요. gnidoc 입니다
+  - 너 김한성이지?
+
+![대댓글 구현 방식1](assets/img9.png)
+
+예시)
+1. 안녕하세요. 김한성입니다
+  - 3) 하이하이 parent_id = 1
+  - 5) 김한성이 누구세요? parent_id = 1
+2. 안녕하세요. gnidoc 입니다
+  - 4) 김한성이지? parent_id = 2
+
+```sql
+SELECT * FROM comment
+WHERE article = 123
+UNION ALL
+SELECT * FROM comment
+JOIN (
+SELECT id FROM comment
+WHERE article = 123) AS parent_comment
+ON parent_comment.id = comment.parent_id
+```
+
+예시) article = 123
+1. 안녕하세요. 김한성입니다
+  - 3) 하이하이 parent_id = 1
+  - 5) 김한성이 누구세요? parent_id = 1
+2. 안녕하세요. gnidoc 입니다
+  - 4) 김한성이지? parent_id = 2
+
+![대댓글 구현 방식2](assets/img10.png)
+
+- 스키마 변경시 2번 작업 필요
+- article 기준으론 JOIN 필요
+- 조회시 2번의 쿼리 실행이 필요
+- 데이터 분산 가능
+
+![대댓글 구현 방식3](assets/img11.png)
+
+- 데이터가 커질수록 부담
+- 성능 문제(쓰기, index)
+- 데이터 무결성 X
+- 단일 쿼리로 모든 데이터 조회 가능
