--- a/docs/Part1/4. 게시판 기능 개발.md
+++ b/docs/Part1/4. 게시판 기능 개발.md
@@ -167,3 +167,79 @@ ON parent_comment.id = comment.parent_id
 - 성능 문제(쓰기, index)
 - 데이터 무결성 X
 - 단일 쿼리로 모든 데이터 조회 가능
+
+## 10. 첨부파일 구현 방식
+
+---
+
+![첨부파일 구현 방식](assets/img12.png)
+
+- 게시판(Board)
+  - 게시글(Article)
+    - 댓글(Comment)
+    - 첨부파일(Attachment) -> 애매한 트랜젝션 타이밍
+- 제목/내용 + 이미지를 한번에 저장
+  - 이미지 저장 실패시 어떻게 해야되는가?
+    - 글 작성 실패? / DB 내용만 저장? / 클라이언트에서 retry?
+  - 이미지가 너무 큰 경우는?
+    - 클라이언트 레벨에서 압축 필요 -> 압축 실패하면?
+    - 서버에서도 용량 확인 필요 (클라이언트를 믿지마라!)
+  - 하이퍼링크 썸네일(OGTag) 제공을 위해서 더 작은 크기 압축이 필요
+    - 썸네일용 이미지와 상세보기에서 노출되는 이미지는 별도로 관리 필요
+    - 클라이언트에게 부담? / 서버에서 부담?
+- 실제로 글 작성(업로드) 버튼을 누르지 않아도 글이 작성된것처럼 처리
+  - 글 작성으로 진입시 제목/내용이 공백인 글을 DB에 저장
+  - 첨부파일 업로드가 완료될때 해당 article에 대한 attachment 수정
+  - 썸네일 같은 후처리는 비동기 방식으로 처리
+    - MQ를 활용한 pub/sub 구조
+
+### 또 다른 문제점 - 파일 업로드를 통한 공격
+
+![또 다른 문제점 - 파일 업로드를 통한 공격](assets/img13.png)
+
+- 파일명을 `../../`와 같이 로컬 경로로 변경하여 공격
+  - 파일확장자를 .log, .ini, .conf, .sh 로 공격
+    - nginx - proxy.conf
+    - reboot.sh
+  - 파일명을 `ftp://x.x.x.x/~~` 식으로 공격
+
+### 해결을 위해선?
+
+- BLOB 타입을 사용해서 DB에 파일을 직접 저장한다
+  - 파일 용량이 커질수록 DB에 성능에 영향을 줌
+    - 동시 요청자가 많아지면 병목 현상이 발생할 수 있음
+- 안전하고 검증된 CDN 서비스를 사용한다
+  - AWS CloudFront(+S3)
+  - CloudFlare
+  - SK브로드밴드, KT, LG U+, 네이버 클라우드 등등
+
+### CDN?
+
+![CDN](assets/img14.png)
+
+- 지리적 제약 없이 전 세계 사용자들에게 빠르게 콘텐츠를 전송하는 기술
+  - Content Delivery Nework
+  - Content Distribution Network
+- 서비스 제공 업체
+  - AWS, GCP, Azure
+  - CloudFlare
+  - SK브로드밴드, KT, LG U+, 네이버 클라우드 등등
+
+### AWS 예시(CloudFront + S3)
+
+https://aws.amazon.com/ko/blogs/korea/amazon-s3-amazon-cloudfront-a-match-made-in-the-cloud/
+
+![AWS CloudFront1](assets/img15.png)
+
+![AWS CloudFront2](assets/img16.png)
+
+### CDN 장/단점
+- 장점
+  - 병목 현상 해결: 자주 사용되는 컨텐츠의 로딩 속도
+  - 트래픽 절약: 해당 지역에 있는 캐시 서버에 접근하기 때문에 국가 단위로 서버 구축 필요X
+  - 강력한 보안
+- 단점
+  - 배포된 컨텐츠에 대한 수정이 사실상 불가능
+    - 서버에서 삭제시 실제 캐시 서버에서 바로 삭제된지까지는 알 수 없음
+  - 개발/운영 난이도 증가
+    - 추가 비용 발생 -> 썸네일 기능 개발, 이미지 저손실 압축 등등
