--- a/docs/Part1/4. 게시판 기능 개발.md
+++ b/docs/Part1/4. 게시판 기능 개발.md
@@ -243,3 +243,46 @@ https://aws.amazon.com/ko/blogs/korea/amazon-s3-amazon-cloudfront-a-match-made-i
     - 서버에서 삭제시 실제 캐시 서버에서 바로 삭제된지까지는 알 수 없음
   - 개발/운영 난이도 증가
     - 추가 비용 발생 -> 썸네일 기능 개발, 이미지 저손실 압축 등등
+
+## 11. text type에 대한 index관련 설명
+
+---
+
+- MySQL 5.7에서는 기본적으로 text type에 대해서 index 생성이 불가능함
+- 대신 prefix index는 생성이 가능
+  - InnoDB에서 text 컬럼의 prefix index 길이는 최대 767Byte까지 지원
+  - UTF-8 사용시 최대 3Byte가 필요하므로 최대 255개까지 지정 가능
+  - UTF-8mb4 사용시 최대 4Byte가 필요하므로 최대 191개까지 지정 가능
+
+```sql
+CREATE TABLE example_table (
+  id INT AUTO_INCREMENT PRIMARY KEY,
+  content TEXT
+) ENGINE=InnoDB;
+
+-- UTF-8 캐릭터셋을 사용하는 경우
+CREATE INDEX idx_content ON example_table (content(255));
+
+-- UTF-8mb4 캐릭터셋을 사용하는 경우
+CREATE INDEX idx_content_utf8mb4 ON example_table (content(191));
+```
+
+### index 크기의 문제
+
+![index 크기의 문제](assets/img17.png)
+
+- 일반적인 index는 B-Tree 구조
+- 너무 짧으면 대부분 검색이 되지 않아 index를 사용하는 의미가 퇴색될 수 있음
+  - 제목은 검색될 수 있지만 글 내용까지는 지원이 불가능
+- 너무 길면 index가 큰 공간을 차지할 수 있음
+  - index 생성시 디스크 공간을 차지함
+  - CRUD 작업시 디스크 IO에 영향을 더 많이 발생 시킴
+
+### FULLTEXT index
+
+- 텍스트 검색을 위해 최적화되어있는 index
+  - 텍스트 변경이 빈번할 경우 업데이트되는 비용이 매우 큼
+  - 일반 index에 비해서 생성 시간도 더 오래걸리고 저장 공간도 많이 차지함
+- `MATCH … AGAINST` 구문으로 사용
+- 단어의 빈도와 위치를 고려하여 “관련성”을 평가함
+  - 자연어 모드와 부울 모드 지원
