Part1 - Ch4.12 Online DDL을 통한 index 추가

--- a/docs/Part1/4. 게시판 기능 개발.md
+++ b/docs/Part1/4. 게시판 기능 개발.md
@@ -286,3 +286,78 @@ CREATE INDEX idx_content_utf8mb4 ON example_table (content(191));
 - `MATCH … AGAINST` 구문으로 사용
 - 단어의 빈도와 위치를 고려하여 “관련성”을 평가함
   - 자연어 모드와 부울 모드 지원
+
+## 12. Online DDL을 통한 index 추가
+
+---
+
+### 실제 서비스 중에 스키마 수정이 필요한 경우
+
+- 신규 기능 배포를 위한 컬럼 추가
+  - default, nullable 등의 옵션 변경
+- 성능 최적화
+  - Legacy 컬럼 제거
+  - index 추가, 변경, 삭제
+- relationship 수정
+  - 외래키 추가, 변경, 삭제
+  - cascade 추가, 변경, 삭제
+- 파티셔닝(partitioning)
+- Trigger, Procedure 추가, 변경, 삭제
+
+> 서비스 중단 필수!!
+
+### Online DDL(Data Definition Language)
+
+- 테이블 구조를 변경할 때, 가용성을 유지하며 변경을 수행할 수 있는 기능
+- 내장된 기능으로 추가적인 설치나 설정이 필요 없음
+- MySQL에서는 InnoDB 를 사용하여 Online DDL 작업을 지원
+
+```sql
+ALTER TABLE example_table ADD COLUMN email VARCHAR(255), ALGORITHM=INPLACE, LOCK=NONE;
+ALTER TABLE example_table ADD INDEX idx_content (content), ALGORITHM=INPLACE, LOCK=NONE;
+ALTER TABLE example_table MODIFY COLUMN content VARCHAR(255), ALGORITHM=INPLACE, LOCK=NONE;
+```
+
+- `ALGORITHM`
+  - `INPLACE`: 테이블 Lock 없이 온라인으로 작업 수행
+  - `COPY`: 테이블 복사본을 생성해서 작업. 테이블 Lock 이 필요할 수 있음
+- `LOCK`
+  - `NONE`: CRUD 작업 모두 허용
+  - `SHARED`: 읽기만 허용
+  - `EXCLUSIVE`: 모두 차단
+
+### Online DDL 특징 및 장점
+
+- 비차단 작업
+  - 테이블을 변경하는 동안 읽기 / 쓰기 작업 가능
+  - 전체 테이블 Lock이 필요 X
+    - (일부 작업이나 매우 큰 변경 사항은 Lock 이 발생할 수 있음)
+- 효율성
+  - 테이블 복사본을 만들지 않고, 필요한 부분만 수정
+  - 디스크, 메모리 사용량이 적어 DB 성능에 미치는 영향을 최소화
+
+### Percona Toolkit
+
+- Percona에서 제공하는 MySQL / MariaDB 관리 Tool
+- 주요 기능
+  - **`pt-online-schema-change`: Online DDL과 비슷한 기능**
+  - `pt-table-checksum`: Master/Slave 간의 데이터 무결성을 확인
+  - `pt-table-sync`: Master/Slave 간의 데이터 동기화
+  - `pt-query-digest`: 쿼리 로그를 분석하여 가장 비용이 많이 드는 쿼리를 분석/최적화
+
+### Percona Toolkit - pt-online-schema-change(pt-osc)
+
+![Percona Toolkit](assets/img18.png)
+
+- Online DDL과의 차이점
+  - 더 많은 기능과 유연성을 제공하고 대규모/고가용성 환경에서 유용함
+    - Online DDL은 복잡한 스키마 변경은 대부분 테이블 Lock이 발생함
+    - `ALGORITHM=INPLACE`로 설정시 성능 저하가 발생할 수 있음
+  - 작업시 모니터링 가능(예 - progress bar)
+  - 테이블을 복사 후 swap하는 방식(Trigger 방식)
+
+### Percona Toolkit 설치
+
+- https://docs.percona.com/percona-toolkit/installation.html
+- 맥북 사용자
+  - `brew install percona-toolkit`
