Part2 - Ch1.02 Datagrip을 통한 접속 방법

--- a/docs/Part2/1. 동접자 1000명의 부하를 견디기 위한 ElasticSearch 기본.md
+++ b/docs/Part2/1. 동접자 1000명의 부하를 견디기 위한 ElasticSearch 기본.md
@@ -36,3 +36,12 @@
 https://www.elastic.co/guide/en/logstash/current/deploying-and-scaling.html#_beats_and_logstash
 
 ![img.png](assets/img1.png)
+
+
+## 2. Datagrip을 통한 접속 방법
+
+- https://www.elastic.co/kr/downloads/jdbc-client
+- ID: elastic, PW: onion1!
+- JDBC 접속을 위해서는 플래티넘 이상의 요금제 구독이 필요
+
+![JDBC 플래티넘 구독](assets/img2.png)
