--- a/docs/Part2/1. 동접자 1000명의 부하를 견디기 위한 ElasticSearch 기본.md
+++ b/docs/Part2/1. 동접자 1000명의 부하를 견디기 위한 ElasticSearch 기본.md
@@ -26,10 +26,12 @@
   - 기능: 대량의 구조화된 및 비구조화된 데이터를 실시간으로 저장, 검색, 분석
 - Logstash
   - 역할: 데이터 수집 및 처리 파이프라인
-  - 기능: 다양한 소스(서버 로그, 애플리케이션 로그 등)로부터 데이터를 수집, 변환, 전송. 데이터를 Elasticsearch에 저장할 수 있도록 처리
+  - 기능: 다양한 소스(서버 로그, 애플리케이션 로그 등)로부터 데이터를 수집, 변환, 전송
+         데이터를 Elasticsearch에 저장할 수 있도록 처리
 - Kibana
   - 역할: 데이터 시각화 및 대시보드 도구
-  - 기능: Elasticsearch에 저장된 데이터를 기반으로 대시보드, 차트, 지도 등을 생성하여 시각화. 실시간으로 데이터 분석과 모니터링이 가능
+  - 기능: Elasticsearch에 저장된 데이터를 기반으로 대시보드, 차트, 지도 등을 생성하여 시각화
+         실시간으로 데이터 분석과 모니터링이 가능
 
 ### ELK Stack (+Beats)
 
@@ -40,8 +42,38 @@ https://www.elastic.co/guide/en/logstash/current/deploying-and-scaling.html#_bea
 
 ## 2. Datagrip을 통한 접속 방법
 
+---
+
 - https://www.elastic.co/kr/downloads/jdbc-client
 - ID: elastic, PW: onion1!
 - JDBC 접속을 위해서는 플래티넘 이상의 요금제 구독이 필요
 
 ![JDBC 플래티넘 구독](assets/img2.png)
+
+
+## 3. kibana 란?
+
+---
+
+### kibana 주요 기능
+
+https://www.elastic.co/kr/elastic-stack
+
+![kibana 주요 기능](assets/img3.png)
+
+- 데이터 시각화: 차트, 그래프, 지도, 타임라인…
+- 대시보드: 차트 활용하여 실시간 데이터 모니터링
+- 데이터 탐색(검색): Lucene 와 Kibana Query Language(KQL)를 사용하여 데이터를 검색
+- 경보 및 보고서: 대시보드(=차트) 기반 보고서 생성 및 이메일 전송
+- Canvas: 사용자 지정 디자인 및 애니메이션을 포함한 인터랙티브한 데이터 시각화
+
+### kibana 활용
+
+- 로그 분석
+  - kubernetes, on-premise 서버의 log 및 metric 제공
+- 보안 모니터링
+  - 네트워크 트래픽, 시스템 로그, 보안 이벤트 등을 모니터링하여 보안 위험 탐지 및 대응
+- 운영 업무
+  - 서버 및 어플리케이션 리소스 모니터링
+  - 비즈니스 데이터(매출, 사용자 행동 등)을 시각화
+  - 운영 업무(관리자, CX) 모니터링 -> 당일, 전일(D-1) 조회 수 상위 10위 게시글 리스트 조회
