--- a/docs/Part2/1. 동접자 1000명의 부하를 견디기 위한 ElasticSearch 기본.md
+++ b/docs/Part2/1. 동접자 1000명의 부하를 견디기 위한 ElasticSearch 기본.md
@@ -77,3 +77,36 @@ https://www.elastic.co/kr/elastic-stack
   - 서버 및 어플리케이션 리소스 모니터링
   - 비즈니스 데이터(매출, 사용자 행동 등)을 시각화
   - 운영 업무(관리자, CX) 모니터링 -> 당일, 전일(D-1) 조회 수 상위 10위 게시글 리스트 조회
+
+## 4. logstash 란?
+
+---
+
+### logstash 주요 기능
+
+- 데이터 수집 (Input)
+  - 입력 플러그인을 통해 여러 소스로부터 데이터를 수집
+  - 파일, 데이터베이스, 메시지 큐, 클라우드 서비스 등에서 데이터를 가져올 수 있음
+- 데이터 변환 (Filter)
+  - 데이터를 변환하고 처리하기 위한 필터 플러그인을 제공
+  - 필터는 데이터를 정리, 변환, 구조화하여 분석 가능한 형태로 변경함
+- 데이터 출력 (Output)
+  - 변환된 데이터를 다양한 출력 플러그인을 통해 전송
+  - 일반적인 출력 대상은 Elasticsearch 이지만, 다른 시스템(ex - 파일, HTTP)으로도 전송 가능
+- 파이프라인 구성
+  - 복잡한 데이터 처리 파이프라인을 구성 가능
+  - 여러 입력, 필터, 출력 단계를 결합하여 데이터 흐름(flow)을 정의
+  - 각 단계는 독립적으로 구성할 수 있으며, 조건문을 사용하여 특정 조건에 따라 데이터를 처리할 수도 있음
+
+### beats 역할 및 기능
+
+- 경량 에이전트이자 데이터 수집기로, 다양한 소스에서 데이터를 수집하여 Elasticsearch 나 Logstash 로 전송
+- 특정 유형의 데이터를 수집하기 위해서 사전 정의된 모듈을 제공 (ex - MySQL, HAProxy, Kafka, AWS…)
+
+### beats 종류
+
+- `Filebeat`: 로그 수집
+- `Metricbeat`: 시스템 메트릭(CPU, 메모리, 디스크 사용량) 수집
+- `Packetbeat`: 네트워크 트래픽 캡처 및 성능/보안 상태 모니터링
+- `Heartbeat`: 웹 서비스, DB 가용성 모니터링
+- `Auditbeat`: 시스템 보안 이벤트 수집 및 사용자 활동 추적
