Part2 - Ch1.05 아키텍처 설명

--- a/docs/Part2/1. 동접자 1000명의 부하를 견디기 위한 ElasticSearch 기본.md
+++ b/docs/Part2/1. 동접자 1000명의 부하를 견디기 위한 ElasticSearch 기본.md
@@ -110,3 +110,106 @@ https://www.elastic.co/kr/elastic-stack
 - `Packetbeat`: 네트워크 트래픽 캡처 및 성능/보안 상태 모니터링
 - `Heartbeat`: 웹 서비스, DB 가용성 모니터링
 - `Auditbeat`: 시스템 보안 이벤트 수집 및 사용자 활동 추적
+
+## 5. 아키텍처 설명(primary, replica, shard, index, document)
+
+---
+
+### Standalone 모드
+
+- 단일 서버로 운영되는 방식
+  - 반대는 Cluster 모드
+- 1개의 서버에서 모든 기능을 동작시킴
+  - 데이터 저장, 검색, indexing, cluster management
+
+- 장점
+  - 설정과 관리가 상대적으로 간단하고 외부 서버와의 통신을 고려할 필요가 없음
+- 단점
+  - 대규모 데이터 처리가 어려움
+  - 고가용성 기능이 없으므로 장애 발생시 서비스 가용성에 영향을 줌
+
+### 클러스터 아키텍처 구조
+
+- Node(노드): 물리/가상 서버
+  - Master Node
+    - 클러스터 상태 및 모든 노드 관리
+    - shard 할당, index 생성
+- Data Node
+  - 실제 데이터를 저장(CRUD 처리)
+  - shard(primary, replica) 저장
+- Coordinate Node
+  - 검색 요청을 다른 노드에 라우팅(분산)
+  - 마스터, 데이터 노드와 직접 상호 작용X
+
+![클러스터 아키텍처 구조1](assets/img4.png)
+
+![클러스터 아키텍처 구조2](assets/img5.png)
+
+### Shard(샤드)
+
+- Shard
+  - index를 구성하는 기본 단위
+  - data를 분산 저장하여 데이터 손실을 방지함
+  - 특정 node에 병목되지 않도록 분산 처리하기 위함
+- 종류
+  - primary: 실제로 저장하는 기본 shard
+  - replica: primary shard의 복제본
+    - 고가용성 및 검색 성능 향상
+
+![Shard(샤드)1](assets/img6.png)
+
+![Shard(샤드)2](assets/img7.png)
+
+![Shard(샤드)3](assets/img8.png)
+
+### Shard != replica
+
+- Shard: data를 분산 저장하기 위한 개념
+- Replica: shard의 복제본
+
+![Shard != replica 1](assets/img9.png)
+
+![Shard != replica 2](assets/img10.png)
+
+### Document
+
+https://www.elastic.co/guide/en/elasticsearch/reference/current/docs-index_.html
+
+![Document](assets/img11.png)
+
+- ElasticSearch에서 가장 작은 단위
+- JSON 형식의 데이터
+- 지원하는 데이터 타입
+  - binary
+  - boolean
+  - keyword
+  - number
+  - date
+  - object(json)
+  - nested(relationship)
+  - text
+
+### Index / Type
+
+https://www.elastic.co/guide/en/elasticsearch/reference/current/indices-put-mapping.html
+
+![인덱스](assets/img12.png)
+
+- index(인덱스)
+  - data(document)를 저장하는 논리적 단위
+  - 각 index는 고유한 이름을 가지고 여러개의 shard로 구성
+
+https://www.elastic.co/guide/en/elasticsearch/reference/7.17/explicit-mapping.html
+
+![타입](assets/img13.png)
+
+- type(타입)
+  - index 내에서 document를 논리적으로 구분하는 단위
+  - 하나의 index에서 여러 타입을 정의하기 위해 존재 했었음
+  - **7.0부터 type 개념은 deprecation되고 index:type=1:1로 매핑됩니다**
+
+### 데이터 추가(write) 과정
+
+https://www.elastic.co/guide/en/elasticsearch/reference/current/docs-replication.html#basic-write-model
+
+![데이터 추가 과정](assets/img14.png)
