Part2 - Ch1.06 MySQL, ElasticSearch 비교

--- a/docs/Part2/1. 동접자 1000명의 부하를 견디기 위한 ElasticSearch 기본.md
+++ b/docs/Part2/1. 동접자 1000명의 부하를 견디기 위한 ElasticSearch 기본.md
@@ -206,10 +206,71 @@ https://www.elastic.co/guide/en/elasticsearch/reference/7.17/explicit-mapping.ht
 - type(타입)
   - index 내에서 document를 논리적으로 구분하는 단위
   - 하나의 index에서 여러 타입을 정의하기 위해 존재 했었음
-  - **7.0부터 type 개념은 deprecation되고 index:type=1:1로 매핑됩니다**
+  - **7.0부터 type 개념은 deprecation 되고 index:type=1:1로 매핑됩니다**
 
 ### 데이터 추가(write) 과정
 
 https://www.elastic.co/guide/en/elasticsearch/reference/current/docs-replication.html#basic-write-model
 
 ![데이터 추가 과정](assets/img14.png)
+
+## 6. MySQL, ElasticSearch 비교
+
+---
+
+![MySQL, ElasticSearch 비교](assets/img15.png)
+
+### index 크기의 문제
+
+(챕터4 클립11 - text type에 대한 index 관련 설명)
+
+![인덱스 구조](assets/img16.png)
+
+- 일반적인 index는 B-Tree 구조
+- 너무 짧으면 대부분 검색이 되지 않아 index를 사용하는 의미가 퇴색될 수 있음
+  - 제목은 검색될 수 있지만 글 내용까지는 지원이 불가능
+- 너무 길면 index가 큰 공간을 차지할 수 있음
+  - index 생성시 디스크 공간을 차지함
+  - CRUD 작업시 디스크 IO에 영향을 더 많이 발생 시킴
+
+### inverted index(역인덱스) 주요 개념
+
+- term: 문서에 등장하는 개별 단어 or 토큰
+  - 형태소: 일정한 의미가 있는 가장 작은 말의 단위
+- posting list: 특정 term이 등장하는 모든 문서의 리스트. 해당 term의 위치 정보도 포함
+- 단어-문서 매핑: 역인덱스는 단어를 key로 해당 단어가 포함된 문서ID의 리스트를 값으로 가지는 매핑을 제공
+  
+안녕하세요
+저는 개발자 김한성입니다
+- 안녕하: 형용사
+- 시: 선어말 어미
+- 어요: 종결 어미
+- 저: 대명사
+- 는: 보조사
+- 개발자: 일반 명사
+
+![역인덱스1](assets/img17.png)
+
+![역인덱스2](assets/img18.png)
+
+### 한국어 형태소 분석기
+
+- 형태소 분석기 = 말뭉치 = 사전에 정의된 용어집(사전)
+
+- 공식 한국어 형태소 분석기: nori(노리)
+  - https://www.elastic.co/kr/blog/nori-the-official-elasticsearch-plugin-for-korean-language-analysis
+
+![한국어 형태소 분석기](assets/img19.png)
+
+![OpenSearch 지원되는 플러그인](assets/img20.png)
+
+### inverted index(역인덱스) 작동 원리
+
+- indexing 과정
+  1. 문서가 주어지면 문서를 토큰화(tokenization)
+  2. 토큰화된 단어를 역인덱스 구조(posting list)에 추가
+  3. 각 단어에 대해 해당 단어가 등장하는 문서와 위치 정보(매핑)를 기록
+- 검색 과정
+  1. 쿼리 분석
+  2. 각 단어에 대해 역인덱스 참조하려 문서 리스트 조회
+  3. 여러 단어가 포함된 쿼리는 각 단어의 posting list를 교집합하여 최종 결과를 도출
