Part2 - Ch1.07 ElasticSearch 라이센스 설명

--- a/docs/Part2/1. 동접자 1000명의 부하를 견디기 위한 ElasticSearch 기본.md
+++ b/docs/Part2/1. 동접자 1000명의 부하를 견디기 위한 ElasticSearch 기본.md
@@ -274,3 +274,40 @@ https://www.elastic.co/guide/en/elasticsearch/reference/current/docs-replication
   1. 쿼리 분석
   2. 각 단어에 대해 역인덱스 참조하려 문서 리스트 조회
   3. 여러 단어가 포함된 쿼리는 각 단어의 posting list를 교집합하여 최종 결과를 도출
+
+## 7. ElasticSearch 라이센스 설명
+
+---
+
+- 2021년 이전: Apache 2.0 = 오픈소스
+  - 사용 권한: 누구나 소프트웨어를 자유롭게 사용할 수 있음
+  - 배포 권한: 소프트웨어의 원본 또는 수정된 버전을 배포할 수 있음(상업적 배포 포함)
+  - 수정 권한: 소프트웨어를 자유롭게 수정할 수 있음. 수정된 버전 배포 가능
+- 2021년~: Elastic License v2, SSPL(Server Side Public License) - 이중(dual) 라이센스
+  - Elastic License v2(ELv2) = 오픈소스 X, 무료 개방형 O
+    - 비상업적 사용 허용: 소프트웨어 무료로 사용 가능. 내부적인 비상업적 사용, 교육, 연구 목적으로 사용 가능
+    - 상업적 사용 제한: 소프트웨어를 서비스로 제공하거나, 제품으로 재배포하는 등의 상업적 사용에는 제한이 있음
+    - 코드 수정 가능: 소스 코드를 수정하고, 변경 사항을 내부적으로 사용할 수 있습니다
+    - 클라우드 서비스 제공 제한: ELv2는 소프트웨어를 기반으로 한 클라우드 서비스 제공을 제한합니다
+  - SSPL
+    - 기본적인 오픈 소스 라이센스와 유사: SSPL은 GPLv3와 유사하게 소스 코드의 사용, 수정, 배포를 허용
+    - 클라우드 서비스 제공 제한: 소프트웨어를 서비스로 제공할 때, 소스 코드와 서비스에 관련된 모든 코드 공개 필요
+    - 자유로운 사용: 개인적인 용도, 교육, 연구 등 비상업적 목적 사용 가능
+
+https://www.elastic.co/kr/pricing/faq/licensing
+
+![라이선스 변경 요약](assets/img21.png)
+
+https://www.elastic.co/kr/pricing/faq/licensing#summary
+
+![Elastic](assets/img22.png)
+
+https://aws.amazon.com/ko/what-is/opensearch/
+
+![OpenSearch](assets/img23.png)
+
+### 써도 되나…?
+
+https://www.elastic.co/kr/pricing/faq/licensing#user-how-effect-me
+
+![라이센스 변경](assets/img24.png)
