Part2 - Ch1.08 mapping과 setting

--- a/docs/Part2/1. 동접자 1000명의 부하를 견디기 위한 ElasticSearch 기본.md
+++ b/docs/Part2/1. 동접자 1000명의 부하를 견디기 위한 ElasticSearch 기본.md
@@ -311,3 +311,56 @@ https://aws.amazon.com/ko/what-is/opensearch/
 https://www.elastic.co/kr/pricing/faq/licensing#user-how-effect-me
 
 ![라이센스 변경](assets/img24.png)
+
+## 8. mapping과 setting
+
+---
+
+### mapping
+
+- document가 저장될때 각 field의 data type을 정의하는 schema
+  - field data type
+    - text, keyword, integer, date, boolean…
+  - analyzer
+    - text field에 대해 어떤 분석기를 사용할 것인지 정의
+  - field property
+    - index, store, doc_values 여부 지정 가능
+  - multiple field
+    - 하나의 text field를 text와 keyword type으로 동시에 indexing 가능
+
+![mapping](assets/img25.png)
+
+### settings
+
+- index의 동작 방식을 제어하는 설정(shard, replica, analyzer…)
+  - number_of_shards
+    - 데이터를 분할하여 저장하는 단위
+  - number_of_replicas
+    - 데이터의 고가용성을 보장
+  - analysis
+    - 형태소 분석기, 토크나이저, 토큰 필터 등을 정의
+  - refresh_interval
+    - index 갱신 주기. 기본값은 1초
+
+![settings](assets/img26.png)
+
+### shard, replica는 얼마나 할당해야할까?
+
+- shard의 사이즈가 클때
+  - 장점: 한번에 많은 데이터를 처리하므로 검색 indexing / 쿼리 성능이 좋아짐. 오버헤드가 적음
+  - 단점: 메모리 사용 증가. 데이터가 고르게 분산되지 않아서 노드 불균형 발생. 백업 및 복구 시간 증가
+
+- 반대로 shard의 사이즈가 작을때
+  - 장점: 클러스터 확장시 유연하게 shard 분산 가능. 노드 간의 부하가 균형있게 분산. 백업 및 복구 시간 감소
+  - 단점: shard마다 메타데이터/리소스를 소비하여 오버헤드 증가. 쿼리 성능 저하
+
+- 단일 노드의 경우엔?
+  - shard가 여러개 있어도 물리적인 병렬 처리에 제한(disk 속도, cpu 속도)이 생김
+
+- replica의 수가 많을때
+  - 장점: 고가용성을 더 많이 보장할 수 있음(데이터 유실에 안전). 읽기 작업을 분산시켜 검색 성능 향상 가능
+  - 단점: replica 수만큼 용량이 배로 증가함
+
+- 단일 노드의 경우엔?
+  - 노드 장애시 primary, replica 모두 사용할 수 없기 때문에 고가용성을 보장할 수 없음
+  - 단일 노드라고 해도 replica를 통해 읽기 작업을 분산하여 조금은 성능 향상을 기대할 수 있지만 물리적인 한계로 인해 큰 성능 향상은 기대할 수 없음
