--- a/docs/Part2/1. 동접자 1000명의 부하를 견디기 위한 ElasticSearch 기본.md
+++ b/docs/Part2/1. 동접자 1000명의 부하를 견디기 위한 ElasticSearch 기본.md
@@ -279,17 +279,17 @@ https://www.elastic.co/guide/en/elasticsearch/reference/current/docs-replication
 
 ---
 
-- 2021년 이전: Apache 2.0 = 오픈소스
+- **2021년 이전: Apache 2.0 = 오픈소스**
   - 사용 권한: 누구나 소프트웨어를 자유롭게 사용할 수 있음
   - 배포 권한: 소프트웨어의 원본 또는 수정된 버전을 배포할 수 있음(상업적 배포 포함)
   - 수정 권한: 소프트웨어를 자유롭게 수정할 수 있음. 수정된 버전 배포 가능
-- 2021년~: Elastic License v2, SSPL(Server Side Public License) - 이중(dual) 라이센스
-  - Elastic License v2(ELv2) = 오픈소스 X, 무료 개방형 O
+- **2021년~: Elastic License v2, SSPL(Server Side Public License) - 이중(dual) 라이센스**
+  - **Elastic License v2(ELv2) = 오픈소스 X, 무료 개방형 O**
     - 비상업적 사용 허용: 소프트웨어 무료로 사용 가능. 내부적인 비상업적 사용, 교육, 연구 목적으로 사용 가능
     - 상업적 사용 제한: 소프트웨어를 서비스로 제공하거나, 제품으로 재배포하는 등의 상업적 사용에는 제한이 있음
     - 코드 수정 가능: 소스 코드를 수정하고, 변경 사항을 내부적으로 사용할 수 있습니다
     - 클라우드 서비스 제공 제한: ELv2는 소프트웨어를 기반으로 한 클라우드 서비스 제공을 제한합니다
-  - SSPL
+  - **SSPL**
     - 기본적인 오픈 소스 라이센스와 유사: SSPL은 GPLv3와 유사하게 소스 코드의 사용, 수정, 배포를 허용
     - 클라우드 서비스 제공 제한: 소프트웨어를 서비스로 제공할 때, 소스 코드와 서비스에 관련된 모든 코드 공개 필요
     - 자유로운 사용: 개인적인 용도, 교육, 연구 등 비상업적 목적 사용 가능
@@ -319,13 +319,13 @@ https://www.elastic.co/kr/pricing/faq/licensing#user-how-effect-me
 ### mapping
 
 - document가 저장될때 각 field의 data type을 정의하는 schema
-  - field data type
+  - `field data type`
     - text, keyword, integer, date, boolean…
-  - analyzer
+  - `analyzer`
     - text field에 대해 어떤 분석기를 사용할 것인지 정의
-  - field property
+  - `field property`
     - index, store, doc_values 여부 지정 가능
-  - multiple field
+  - `multiple field`
     - 하나의 text field를 text와 keyword type으로 동시에 indexing 가능
 
 ![mapping](assets/img25.png)
@@ -333,34 +333,127 @@ https://www.elastic.co/kr/pricing/faq/licensing#user-how-effect-me
 ### settings
 
 - index의 동작 방식을 제어하는 설정(shard, replica, analyzer…)
-  - number_of_shards
+  - `number_of_shards`
     - 데이터를 분할하여 저장하는 단위
-  - number_of_replicas
+  - `number_of_replicas`
     - 데이터의 고가용성을 보장
-  - analysis
+  - `analysis`
     - 형태소 분석기, 토크나이저, 토큰 필터 등을 정의
-  - refresh_interval
+  - `refresh_interval`
     - index 갱신 주기. 기본값은 1초
 
 ![settings](assets/img26.png)
 
 ### shard, replica는 얼마나 할당해야할까?
 
-- shard의 사이즈가 클때
+- **shard의 사이즈가 클때**
   - 장점: 한번에 많은 데이터를 처리하므로 검색 indexing / 쿼리 성능이 좋아짐. 오버헤드가 적음
   - 단점: 메모리 사용 증가. 데이터가 고르게 분산되지 않아서 노드 불균형 발생. 백업 및 복구 시간 증가
 
-- 반대로 shard의 사이즈가 작을때
+- **반대로 shard의 사이즈가 작을때**
   - 장점: 클러스터 확장시 유연하게 shard 분산 가능. 노드 간의 부하가 균형있게 분산. 백업 및 복구 시간 감소
   - 단점: shard마다 메타데이터/리소스를 소비하여 오버헤드 증가. 쿼리 성능 저하
 
-- 단일 노드의 경우엔?
+- **단일 노드의 경우엔?**
   - shard가 여러개 있어도 물리적인 병렬 처리에 제한(disk 속도, cpu 속도)이 생김
 
-- replica의 수가 많을때
+- **replica의 수가 많을때**
   - 장점: 고가용성을 더 많이 보장할 수 있음(데이터 유실에 안전). 읽기 작업을 분산시켜 검색 성능 향상 가능
   - 단점: replica 수만큼 용량이 배로 증가함
 
-- 단일 노드의 경우엔?
+- **단일 노드의 경우엔?**
   - 노드 장애시 primary, replica 모두 사용할 수 없기 때문에 고가용성을 보장할 수 없음
   - 단일 노드라고 해도 replica를 통해 읽기 작업을 분산하여 조금은 성능 향상을 기대할 수 있지만 물리적인 한계로 인해 큰 성능 향상은 기대할 수 없음
+
+## 9. 흔하게 겪는 brain split과 re-indexing 문제
+
+---
+
+### brain split 문제
+
+- 클러스터 내의 노드들이 네트워크 분리 또는 기타 장애로 인해 서로 통신할 수 없게 되면서 각 노드가 자신이 마스터 노드라고 잘못 판단하는 현상
+  - 분산 시스템, 특히 클러스터 환경에서 발생할 수 있는 문제
+  - 일부 노드들이 서로 통신할 수 없게 되어 각 노드가 자신이 마스터라고 잘못 판단할 때 발생
+  - 데이터 일관성 문제와 클러스터의 안정성 저하를 초래
+  - 최악의 경우, 시스템 복구 불가능 초래
+
+![brain split 1](assets/img27.png)
+
+![brain split 2](assets/img28.png)
+
+![brain split 3](assets/img29.png)
+
+![brain split 4](assets/img30.png)
+
+![brain split 5](assets/img31.png)
+
+![brain split 6](assets/img32.png)
+
+![brain split 7](assets/img33.png)
+
+![brain split 8](assets/img34.png)
+
+![brain split 9](assets/img35.png)
+
+![brain split 10](assets/img36.png)
+
+![brain split 11](assets/img37.png)
+
+![brain split 12](assets/img38.png)
+
+![brain split 13](assets/img39.png)
+
+![brain split 14](assets/img40.png)
+
+![brain split 15](assets/img41.png)
+
+![brain split 16](assets/img42.png)
+
+![brain split 17](assets/img43.png)
+
+![brain split 18](assets/img44.png)
+
+### brain split 문제 방지를 위한 설정
+
+- **Master Node는 홀수개로 구성**
+- **Minimum Master Nodes 설정**
+  - 클러스터가 최소 몇 개의 마스터 노드와 통신할 수 있어야 정상적으로 작동할지를 정의
+  - 이 설정을 통해 클러스터가 여러 개의 마스터 노드를 생성하는 것을 방지
+  - 예) discovery.zen.minimum_master_nodes: 2
+- **Zen Discovery**
+  - 클러스터 내의 노드들이 서로를 발견하고, 통신을 관리하며, 네트워크 분리를 감지하여 Brain Split 문제를 방지
+
+### re-indexing 문제
+
+- **setting, mapping를 변경해야되는 상황**
+  - shard, replica, field type, dictionary, analyzer 변경
+- **ElasticSearch Cluster 버전 업그레이드**
+  - 호환성을 위해서 데이터를 다시 `indexing` 해야하는 경우가 있음
+- **성능 최적화**
+  - 데이터 구조 최적화, 삭제된 문서 처리, 불필요한 데이터 제거
+  - analyzer 최적화, 데이터 볼륨 증가
+
+### re-indexing 이 필요한 경우
+
+- **rolling re-indexing**
+  - 기존 `index`는 유지하고 새로운 `index`를 생성하여 점진적으로 데이터를 복사
+  - 끝난 뒤에 application이 새로운 `index`를 참조하도록 변경
+- **일괄 처리**
+  - 데이터 세트를 여러개의 작은 배치로 나눠서 성능 저하를 최소화하여 진행
+- **re-index API 사용**
+  - 편하긴 하지만 `mapping`이 잘못되어 field 타입이나 이름이 충돌나면 오류가 발생할 수 있음
+  - 문제가 발생했을때 원인 파악이 쉽지 않음
+
+![re-index](assets/img45.png)
+
+### re-indexing 중 자주 발생하는 문제
+
+- **리소스 소모로 인한 클러스터 성능 저하**
+  - 일부 노드에 과부하가 걸려서 장애가 발생할 수 있음
+  - CPU, 메모리, Disk I/O, Network 등등 전반적인 노드 상태 확인이 필요
+  - 작업속도에 제한을 걸면 성능엔 덜 영향을 주지만 작업 완료시간이 기약없이 길어질 수 있음
+- **데이터 일관성**
+  - 설정을 잘못하거나 중단된 re-indexing 작업으로 인해 중복 데이터가 생기거나 손실될 수 있음
+  - 부분적으로 `re-indexing`을 하여 전체가 아닌 변경된 데이터 세트만 `re-indexing`을 할 수 있음
+- **백업 및 복구**
+  - 백업을 위한 스냅샷을 생성하다가 클러스터 성능 저하가 발생하거나 장애가 발생할 수 있음
